More fixes for String::operator+=() in Debug mode https://bugs.webkit.org/show_bug.cgi?id=95888

Patch by Patrick Gansterer <paroga@webkit.org> on 2012-09-06
Reviewed by Adam Barth.

Use StringBuilder to concatenate strings instead of operator+=().

* dom/Element.cpp:
(WebCore::Element::formatForDebugger):
* dom/Node.cpp:
(WebCore::appendAttributeDesc):
(WebCore::Node::showNode):
(WebCore::traverseTreeAndMark):
(WebCore::Node::formatForDebugger):
* dom/Position.cpp:
(WebCore::Position::formatForDebugger):
* dom/Range.cpp:
(WebCore):
(WebCore::Range::formatForDebugger):
* dom/Text.cpp:
(WebCore::Text::formatForDebugger):
* editing/VisibleSelection.cpp:
(WebCore::VisibleSelection::formatForDebugger):


Canonical link: https://commits.webkit.org/113808@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127706 268f45cc-cd09-0410-ab3c-d52691b4dbfc